--- a/assets/css/font.css
+++ b/assets/css/font.css
@@ -13,3 +13,11 @@
     font-weight: 400;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'LXGWBright';
+    src: url('../fonts/LXGWBright-Medium.ttf') format('truetype'),
+         url('../fonts/LXGWBright-Medium.otf') format('truetype');
+    font-weight: 600;
+    font-style: normal;
+}
