update font setting

--- a/assets/css/font.css
+++ b/assets/css/font.css
@@ -5,3 +5,19 @@
     font-weight: 600;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url('../fonts/montserrat-black.woff') format('woff'),
+         url('../fonts/montserrat-black.woff2') format('woff2');
+    font-weight: 900;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Merriweather';
+    src: url('../fonts/merriweather-regular.woff2') format('woff'),
+         url('../fonts/merriweather-regular.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+}
